--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
     <artifactId>guava</artifactId>
     <version>18.0</version>
 </dependency>
+<dependency>
+    <groupId>com.graphhopper</groupId>
+    <artifactId>directions-api-java-client-geocoding</artifactId>
+    <version>0.8.0</version>
+</dependency>
   </dependencies>
   <build>
     <finalName>routeOptimizerWebApp</finalName>
