--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,11 @@
 			<version>${spring.version}</version>
 		</dependency>
 
-		<dependency>
+	<dependency>
     <groupId>javax.servlet</groupId>
-    <artifactId>jstl</artifactId>
-    <version>1.2</version>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>3.1.0</version>
+    <scope>provided</scope>
 </dependency>
 <dependency>
     <groupId>org.optaplanner</groupId>
