--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
 		<jcl-over-slf4j.version>1.7.5</jcl-over-slf4j.version>
 	</properties>
   <dependencies>
+  <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>1.9.13</version>
+</dependency>
    <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
